Forts. arbete med index

--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
     <title>OrionSpike</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="container">
         <header>
             <img src="" alt="Logotyp">
             <nav>
-                nav
+                <button type="button" class="btn btn-default">Sign In</button>
+                <button type="button" class="btn btn-default">Sign Up</button>
             </nav>
         </header>
         <section>
             <article>
-                article 
+                <h1>
+                    <span>OrionSpike</span> - kontrollen är din!<br>
+                </h1>
            </article>
             <aside>
-                aside
+                
                 <img src="" alt="">
             </aside> 
         </section>
