Forts. jobb med index

--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 <body>
     <div class="wrapper">
         <header>
-            <img src="" alt="Logotyp">
+            <div class="logo">
+                <img src="orinlogo.PNG" alt="Logotyp">
+            </div>
             <nav>
-                nav
+                <a href="#" class="btn btn-default">button</a>
+                <a href="#" class="btn btn-default">button</a>
+                <a href="#" class="btn btn-default">button</a>
+                <a href="#" class="btn btn-default">button</a>
             </nav>
         </header>
         <section>
             <article>
-                article 
+                <h2>Up Your Game With <br> <span> Orion Spike </span></h2>
            </article>
             <aside>
-                aside
-                <img src="" alt="">
+                <!-- <img src="orinlogo.PNG" alt="Logotyp"> -->
             </aside> 
         </section>
         <footer>
