--- a/index.html
+++ b/index.html
@@ -9,28 +9,34 @@
 </head>
 <body>
     <div class="wrapper">
-        <header>
-            <div class="logo">
-                <img src="orinlogo.PNG" alt="Logotyp">
-            </div>
-            <nav>
-                <a href="#" class="btn btn-default">button</a>
-                <a href="#" class="btn btn-default">button</a>
-                <a href="#" class="btn btn-default">button</a>
-                <a href="#" class="btn btn-default">button</a>
-            </nav>
-        </header>
-        <section>
-            <article>
-                <h2>Up Your Game With <br> <span> Orion Spike </span></h2>
-           </article>
-            <aside>
-                <!-- <img src="orinlogo.PNG" alt="Logotyp"> -->
-            </aside> 
-        </section>
-        <footer>
-            footer
-        </footer>
+        <div class="container">
+            <header>
+                <div class="logo">
+                    <img src="pic/orinlogo.PNG" alt="Logotyp">
+                </div>
+                <nav>
+                    <a href="#" class="btn btn-default">Log in</a>
+                    <a href="#" class="btn btn-default">Kontakt</a>
+                    <a href="#" class="btn btn-default">Ditt Konto</a>
+                    <a href="#" class="btn btn-default">Tider</a>
+                </nav>
+            </header>
+            <section>
+                <article>
+                    <h2>Up Your Game With <br> <span> Orion Spike </span></h2>
+               </article>
+                <aside>
+                    <img src="pic/spikeslang.jpg" alt="pic/spikeplay.jpg">
+                </aside> 
+            </section>
+            <footer>
+                <p>
+                    This is a footer <br><br>
+                    with lots of info <br><br>
+                    Copyright © 2023 HubSpot, Inc.
+                </p>
+            </footer>
+        </div>
     </div>
 </body>
 </html>
