--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <img src="pic/orinlogo.PNG" alt="Logotyp">
                 </div>
                 <nav>
-                    <a href="#" class="btn btn-default">Log in</a>
+                    <a href="login.html" class="btn btn-default">Log in</a>
                     <a href="#" class="btn btn-default">Kontakt</a>
                     <a href="#" class="btn btn-default">Ditt Konto</a>
                     <a href="#" class="btn btn-default">Tider</a>
