--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <title>OrionSpike</title>
 </head>
@@ -12,11 +13,11 @@
         <div class="container">
             <header>
                 <div class="logo">
-                    <img src="pic/orinlogo.PNG" alt="Logotyp">
+                    <a href="index.html"><img src="pic/orinlogo.PNG" alt="Logotyp"></a>
                 </div>
                 <nav>
                     <a href="login.html" class="btn btn-default">Log in</a>
-                    <a href="#" class="btn btn-default">Kontakt</a>
+                    <a href="ledningen.html" class="btn btn-default">Ledarna</a>
                     <a href="#" class="btn btn-default">Ditt Konto</a>
                     <a href="#" class="btn btn-default">Tider</a>
                 </nav>
@@ -33,7 +34,7 @@
                 <p>
                     This is a footer <br><br>
                     with lots of info <br><br>
-                    Copyright © 2023 HubSpot, Inc.
+                    Copyright © 2023 OrionSpike, Inc.
                 </p>
             </footer>
         </div>
