--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
 <body>
     <div class="wrapper">
         <div class="container">
+            <div id="popup">
+                <button type="button" id="close" class="btn-close btn-close-white popupknapp" aria-label="Close"></button>
+                <h2><span>Välkommen till OrionSpike!</span> <br> <br>
+                Tveka inte att höra av dig vid frågor.
+                </h2>
+            </div>
+            <div id="pop2">
+                <button type="button" id="close2" class="btn-close btn-close-white popupknapp2" aria-label="Close"></button>
+                <h2>
+                    Tryck på knappen igen.
+                </h2>    
+            </div>
             <header>
                 <div class="logo">
                     <a href="index.html"><img src="pic/orinlogo.PNG" alt="Logotyp"></a>
@@ -40,5 +52,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="javascript.js"></script>
 </body>
 </html>
