--- a/html/ledningen.html
+++ b/html/ledningen.html
@@ -17,7 +17,7 @@
                 </div>
                 <nav>
                     <a href="login.html" class="btn btn-default">Log in</a>
-                    <a href="#" class="btn btn-default">Ledarna</a>
+                    <a href="ledningen.html" class="btn btn-default">Ledarna</a>
                     <a href="#" class="btn btn-default">Ditt Konto</a>
                     <a href="#" class="btn btn-default">Tider</a>
                 </nav>
