--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <title>OrionSpike</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
             </div>
             <header>
                 <div class="logo">
-                    <a href="index.html"><img src="pic/orinlogo.PNG" alt="Logotyp"></a>
+                    <a href="index.html"><img src="../pic/orinlogo.PNG" alt="Logotyp"></a>
                 </div>
                 <nav>
                     <a href="login.html" class="btn btn-default">Log in</a>
@@ -39,7 +39,7 @@
                     <h2>Up Your Game With <br> <span> Orion Spike </span></h2>
                </article>
                 <aside>
-                    <img src="pic/spikeslang.jpg" alt="pic/spikeplay.jpg">
+                    <img src="../pic/spikeslang.jpg" alt="spikeslang.jpg">
                 </aside> 
             </section>
             <footer>
@@ -52,6 +52,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="javascript.js"></script>
+    <script src="../JS/javascript.js"></script>
 </body>
 </html>
