--- a/html/ledningen.html
+++ b/html/ledningen.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="ledningen.css">
+    <link rel="stylesheet" href="../css/ledningen.css">
     <title>OrionSpike</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div class="container">
             <header>
                 <div class="logo">
-                    <a href="index.html"><img src="pic/orinlogo.PNG" alt="Logotyp"></a>
+                    <a href="index.html"><img src="../pic/orinlogo.PNG" alt="Logotyp"></a>
                 </div>
                 <nav>
                     <a href="login.html" class="btn btn-default">Log in</a>
